<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="120dp"
    android:layout_marginHorizontal="4dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="165dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/poster_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/poster"
            tools:src="@color/purple_500" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/episode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        tools:text="14 eps" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/score"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_score"
            android:paddingHorizontal="8dp"
            android:textColor="@color/white"
            android:textSize="13sp"
            tools:text="8.7" />

    </LinearLayout>

</LinearLayout>